      than configured in before*.rules
    - add state RELATED,ESTABLISHED rule to ufw-before-output in before*.rules
      like we do with ufw-before-input, to increase performance
    - DEFAULT_OUTPUT_POLICY and DEFAULT_INPUT_POLICY can now also be set to
      ACCEPT_NO_TRACK, which avoids adding connection tracking rules for
      state NEW
    - update documentation for the above

 -- Jamie Strandboge <jamie@ubuntu.com>  Thu, 20 Aug 2009 18:49:26 -0500

ufw (0.28) RELEASED; urgency=low

  * translation fixes
  * add interface rules
  * update Makefile to fail if byte-compiling failed
  * install rules files 0640 (LP: #393187)
  * adjust help command for proper translation and bash completion support
  * add limit command to help (LP: #358964)
  * add shell-completion/bash. Based on work by Didier Roche
  * tests/*: updated with 'nostats' option so redundant tests are counted
    in test results. Update many root tests to use 'nostats'
  * look for location of iptables and set IPTABLES_DIR in common.py. Adjust
    calls to ip[6]tables* to use IPTABLES_DIR
  * fix harmless but annoying bug where multi-rule application rules ended
    up with ::/0 in the tuple line in user.rules (IPV4) when not specifying a
    destination or source address and IPV6 is enabled
  * make insert rule logic more robust
  * update setup.py to install user rules and init script helpers into
    /lib, rather than /var/lib and /usr/share/ufw. Update tests,
    backend_iptables.py, ufw-init and documentation accordingly. (LP: #400208)

 -- Jamie Strandboge <jamie@ubuntu.com>  Wed, 15 Jul 2009 09:30:25 -0500

ufw (0.27.1) RELEASED; urgency=low

  * update README for instructions on integrating ufw into the boot process
  * adjust strings to better conform with translation guidelines (LP: #353424)
  * adjust translation location to work with rosetta

 -- Jamie Strandboge <jamie@ubuntu.com>  Mon, 23 Mar 2009 12:06:27 -0500

ufw (0.27) RELEASED; urgency=low
